<resources>
    <string name="app_name">UserGitHub</string>
    <string name="searchbar_expl">Search…</string>
    <string name="your_username">Your Username</string>
    <string name="full_name">Full Name</string>
    <string name="no_folls">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="share_button">share</string>
    <string name="photo_profile">photoPorfile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="fav_list">favorite list</string>
    <string name="theme_set">theme setting</string>
    <string name="no_following_here">This user has no following.</string>
    <string name="no_follower_here">This user has no followers.</string>
    <string name="no_favorite_users_found">No favorite users found.</string>
    <string name="user_not_found">User not found.</string>
</resources>