<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                tools:src="@tools:sample/avatars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:text="@string/full_name" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                tools:text="@string/your_username"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="53dp"
                android:paddingEnd="53dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:stretchColumns="1,3">

                <TableRow>

                    <TextView
                        android:id="@+id/userfollowers"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:padding="17dp"
                        android:text="@string/followers"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userfollowing"
                        android:padding="17dp"
                        android:text="@string/following"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_column="2" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tv_followersTotal"
                        android:layout_width="14dp"
                        android:layout_column="0"
                        android:layout_gravity="center"
                        android:padding="8dp"
                        android:text="@string/no_folls"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_followingTotal"
                        android:padding="8dp"
                        android:text="@string/no_folls"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_column="2" />

                </TableRow>

            </TableLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/detailTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/detailTabs" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
